# COP4610-FCFS-Scheduler

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp  process.h
src/fcfs/: fcfs_scheduler.cpp  fcfs_scheduler.h
